# resume-matching-pipeline

./: .env  .gitignore  README.md  mysql-connection  mysql-connection.py  pyproject.toml  rbmodel_readme  script1.py  test2s.py  test_script.py
config/: config.yaml
src/: database.py  main.py
